# yams

./: .dockerignore  .gitignore  Dockerfile  README.md  YAMS_JCNR_Article.md  clusters-sample.json  docker-run.sh  enhanced_mcp_server.py  pyproject.toml  requirements.txt  run_mcp_stdio.sh
clusters/: clusters-sample-with-commands.json  jcnr-command-list.json  pod-command-list.json
